Embed fonts in common library to avoid external resources

--- a/app/BUILD
+++ b/app/BUILD
@@ -5,8 +5,6 @@ load("//tools:embed.bzl", "embed_data")
 embed_data(
   name = "app",
   srcs = [
-    "image/appicon.ico",
-    "image/rr-logo.svg",
     "lib/component.js",
     "lib/oneof.js",
     "lib/docview.js",
@@ -14,5 +12,95 @@ embed_data(
     "lib/material.js",
     "lib/frame.js",
     "lib/reddit.js",
+
+    "image/appicon.ico",
+    "image/rr-logo.svg",
   ],
 )
+
+embed_data(
+  name = "roboto-font",
+  srcs = [
+    "font/roboto.css",
+
+    "font/roboto-normal-latin.woff2",
+    "font/roboto-normal-latin-ext.woff2",
+    "font/roboto-normal-cyrillic.woff2",
+    "font/roboto-normal-cyrillic-ext.woff2",
+    "font/roboto-normal-greek.woff2",
+    "font/roboto-normal-greek-ext.woff2",
+    "font/roboto-normal-vietnamese.woff2",
+
+    "font/roboto-500-latin.woff2",
+    "font/roboto-500-latin-ext.woff2",
+    "font/roboto-500-cyrillic.woff2",
+    "font/roboto-500-cyrillic-ext.woff2",
+    "font/roboto-500-greek.woff2",
+    "font/roboto-500-greek-ext.woff2",
+    "font/roboto-500-vietnamese.woff2",
+
+    "font/roboto-italic-latin.woff2",
+    "font/roboto-italic-latin-ext.woff2",
+    "font/roboto-italic-cyrillic.woff2",
+    "font/roboto-italic-cyrillic-ext.woff2",
+    "font/roboto-italic-greek-ext.woff2",
+    "font/roboto-italic-greek.woff2",
+    "font/roboto-italic-vietnamese.woff2",
+  ],
+)
+
+embed_data(
+  name = "lato-font",
+  srcs = [
+    "font/lato.css",
+
+    "font/lato-normal.woff2",
+    "font/lato-normal-ext.woff2",
+    "font/lato-bold.woff2",
+    "font/lato-bold-ext.woff2",
+    "font/lato-italic.woff2",
+    "font/lato-italic-ext.woff2",
+    "font/lato-bold-italic.woff2",
+    "font/lato-bold-italic-ext.woff2",
+  ],
+)
+
+embed_data(
+  name = "lora-font",
+  srcs = [
+    "font/lora.css",
+
+    "font/lora-normal-latin.woff2",
+    "font/lora-normal-latin-ext.woff2",
+    "font/lora-normal-cyrillic.woff2",
+    "font/lora-normal-cyrillic-ext.woff2",
+    "font/lora-normal-vietnamese.woff2",
+
+    "font/lora-bold-latin.woff2",
+    "font/lora-bold-latin-ext.woff2",
+    "font/lora-bold-cyrillic.woff2",
+    "font/lora-bold-cyrillic-ext.woff2",
+    "font/lora-bold-vietnamese.woff2",
+
+    "font/lora-italic-latin.woff2",
+    "font/lora-italic-latin-ext.woff2",
+    "font/lora-italic-cyrillic.woff2",
+    "font/lora-italic-cyrillic-ext.woff2",
+    "font/lora-italic-vietnamese.woff2",
+
+    "font/lora-bold-italic-latin.woff2",
+    "font/lora-bold-italic-latin-ext.woff2",
+    "font/lora-bold-italic-cyrillic.woff2",
+    "font/lora-bold-italic-cyrillic-ext.woff2",
+    "font/lora-bold-italic-vietnamese.woff2",
+  ],
+)
+
+embed_data(
+  name = "material-icons",
+  srcs = [
+    "font/material.woff2",
+    "font/material-outline.woff2",
+  ],
+)
+
