--- a/sling/db/BUILD
+++ b/sling/db/BUILD
@@ -53,6 +53,8 @@ cc_library(
     ":db",
     ":dbprotocol",
     "//app",
+    "//app:roboto-font",
+    "//app:material-icons",
     "//sling/base",
     "//sling/file:embed",
     "//sling/net:http-server",
