--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -205,6 +205,10 @@ cc_library(
     ":properties",
     ":xref",
     "//app",
+    "//app:roboto-font",
+    "//app:lato-font",
+    "//app:lora-font",
+    "//app:material-icons",
     "//sling/base",
     "//sling/db:dbclient",
     "//sling/file:recordio",
