--- a/sling/task/BUILD
+++ b/sling/task/BUILD
@@ -67,6 +67,8 @@ cc_library(
     ":app",
     ":job",
     "//app",
+    "//app:roboto-font",
+    "//app:material-icons",
     "//sling/base",
     "//sling/base:perf",
     "//sling/file:embed",
