Add AIC, dedup, and captions to redreport

--- a/sling/frame/BUILD
+++ b/sling/frame/BUILD
@@ -158,6 +158,7 @@ cc_library(
     ":store",
     "//sling/base",
     "//sling/stream:input",
+    "//sling/stream:output",
     "//sling/string:ctype",
     "//sling/string:numbers",
   ],
