URI mapping in reconciler and id lookup

--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -56,6 +56,7 @@ cc_library(
   name = "reconciler",
   srcs = ["reconciler.cc"],
   deps = [
+    ":xref",
     "//sling/base",
     "//sling/frame",
     "//sling/task:frames",
