Python API for Wikipedia parser and annotator

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -69,6 +69,9 @@ cc_library(
     "//sling/nlp/parser:frame-evaluation",
     "//sling/nlp/web:text-extractor",
     "//sling/nlp/wiki:wikidata-converter",
+    "//sling/nlp/wiki:wiki-annotator",
+    "//sling/nlp/wiki:wiki-parser",
+    "//sling/nlp/wiki:wikipedia-map",
     "//sling/task:dashboard",
     "//sling/task:job",
     "//sling/task:process",
