Table rendering in witex

--- a/sling/nlp/wiki/BUILD
+++ b/sling/nlp/wiki/BUILD
@@ -57,6 +57,7 @@ cc_library(
   hdrs = ["wiki-extractor.h"],
   deps = [
     ":wiki-parser",
+    "//sling/string:numbers",
     "//sling/string:strcat",
   ],
 )
