Case-less ids in reconciler

--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -59,6 +59,7 @@ cc_library(
     ":xref",
     "//sling/base",
     "//sling/frame",
+    "//sling/string:ctype",
     "//sling/task:frames",
     "//sling/task:reducer",
     "//sling/util:mutex",
