Move global.js and value.js to common lib

--- a/app/BUILD
+++ b/app/BUILD
@@ -11,6 +11,8 @@ embed_data(
     "lib/gallery.js",
     "lib/material.js",
     "lib/frame.js",
+    "lib/global.js",
+    "lib/datatype.js",
     "lib/reddit.js",
 
     "image/appicon.ico",
