--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -147,9 +147,7 @@ cc_binary(
   deps = [
     ":pyapi",
     ":tasks",
-    "//app:roboto-font",
-    "//app:anubis-font",
-    "//app:material-icons",
+    "//app",
     "//sling/base",
     "//sling/file:posix",
   ],
