News extractor and reader (newser)

--- a/sling/nlp/web/BUILD
+++ b/sling/nlp/web/BUILD
@@ -10,6 +10,7 @@ cc_library(
     "//sling/stream:input",
     "//sling/string:ctype",
     "//sling/string:strcat",
+    "//sling/string:text",
     "//sling/util:fingerprint",
     "//sling/web:html-parser",
   ],
