Use SLING subtokenizer for BERT models

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -60,6 +60,7 @@ cc_library(
     "//sling/nlp/document:document-tokenizer",
     "//sling/nlp/document:lex",
     "//sling/nlp/document:phrase-tokenizer",
+    "//sling/nlp/document:subword-tokenizer",
     "//sling/nlp/embedding:plausibility-model",
     "//sling/nlp/kb:calendar",
     "//sling/nlp/kb:facts",
