Task processor for filtering out messages

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -139,6 +139,7 @@ cc_library(
     "//sling/task:database-writer",
     "//sling/task:pipe-reader",
     "//sling/task:workers",
+    "//sling/task:filter",
     "//sling/task:null-sink",
   ],
 )
