Sever-based bulk import in collaboration server

--- a/case/BUILD
+++ b/case/BUILD
@@ -9,11 +9,14 @@ cc_binary(
     "//sling/frame:store",
     "//sling/frame:decoder",
     "//sling/frame:encoder",
+    "//sling/frame:reader",
+    "//sling/frame:wire",
     "//sling/net:http-server",
     "//sling/net:web-sockets",
     "//sling/stream:input",
     "//sling/stream:file",
     "//sling/stream:memory",
+    "//sling/string:strcat",
     "//sling/util:mutex",
     "//sling/util:queue",
     "//sling/util:thread",
