SLINGDB clear and purge commands

--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -269,6 +269,7 @@ cc_library(
     ":knowledge-service",
     "//sling/base",
     "//sling/net:http-server",
+    "//sling/net:web-service",
     "//sling/string:text",
   ],
 )
