Server-Timing HTTP header in media service

--- a/sling/net/BUILD
+++ b/sling/net/BUILD
@@ -73,7 +73,9 @@ cc_library(
     ":http-server",
     ":http-utils",
     "//sling/base",
+    "//sling/base:clock",
     "//sling/db:dbclient",
+    "//sling/string:strcat",
     "//sling/util:mutex",
   ],
 )
